name:                QCVEngine
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable QCVEngine
  hs-source-dirs:      src .
  main-is:             Main.hs
  build-depends:       base, QuickCheck, bytestring, network, binary, directory, filemanip, bitwise, regex-posix, split
  other-modules:       InstrCodec, RISCV,
                       RISCV.ArchDesc, RISCV.Helpers, RISCV.InstPretty,
                       RISCV.RV32_I, RISCV.RV32_M, RISCV.RV32_A, RISCV.RV32_F,
                       RISCV.RV32_Zifencei, RISCV.RV32_Zicsr, RISCV.RV32_Xcheri,
                       RISCV.RV64_I, RISCV.RV64_M, RISCV.RV64_A, RISCV.RV64_F,
                       RVFI_DII, Template,
                       Templates.GenAll, Templates.GenArithmetic, Templates.GenCHERI,
                       Templates.GenControlFlow, Templates.GenMemory,
                       Templates.GenMulDiv, Templates.GenAtomics, Templates.GenFP,
                       Templates.GenCSRs, Templates.RandomTest, Templates.Utils
  other-extensions:    FlexibleInstances, MultiParamTypeClasses, FunctionalDependencies, OverloadedStrings, ScopedTypeVariables, DeriveGeneric
  default-language:    Haskell98
