name:                QCVEngine
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable QCVEngine
  hs-source-dirs:      src .
  main-is:             Main.hs
  build-depends:       base >=4.9, QuickCheck >=2.12, bytestring >=0.10, network >=2.8, binary >=0.8, regex-posix >=0.95, filemanip >=0.3, split >=0.2, bitwise >=1.0
  other-modules:       InstrCodec, RISCV,
                       RISCV.ArchDesc, RISCV.Helpers, RISCV.InstPretty,
                       RISCV.RV32_I, RISCV.RV32_M, RISCV.RV32_A, RISCV.RV32_F, RISCV.RV32_D,
                       RISCV.RV32_Zifencei, RISCV.RV32_Zicsr, RISCV.RV32_Xcheri,
                       RISCV.RV64_I, RISCV.RV64_M, RISCV.RV64_A, RISCV.RV64_F, RISCV.RV64_D,
                       RISCV.RV_C, Template,
                       Templates.GenAll, Templates.GenArithmetic, Templates.GenCHERI,
                       Templates.GenControlFlow, Templates.GenMemory,
                       Templates.GenMulDiv, Templates.GenAtomics, Templates.GenFP,
                       Templates.GenCSRs, Templates.RandomTest, Templates.Utils,
                       Templates.Utils.General, Templates.Utils.CHERI, Templates.Utils.FP,
                       RVFI_DII, RVFI_DII.RVFI, RVFI_DII.DII
  other-extensions:    FlexibleInstances, MultiParamTypeClasses, FunctionalDependencies, OverloadedStrings, ScopedTypeVariables
  default-language:    Haskell2010
